<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="interactive_live_title">Interactive Live</string>
    <string name="interactive_live_description">PK, chat, gifts, likes, beauty effects, 1080P live experience</string>
    <string name="gifts">Gifts</string>
    <string name="flower">Flower</string>
    <string name="rocket">Rocket</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string name="disconnect">Disconnect</string>
    <string name="go_live">go live</string>
    <string name="start_live">Start</string>
    <string name="no_live">No LIVE now.</string>
    <string name="mute">Mute</string>
    <string name="request_sent_waiting">Request sent. Waiting for approval.</string>
    <string name="first_audience_link_message">Agree with the co-host request</string>
    <string name="live_ended_title">LIVE ended. Go back to the list page</string>
    <string name="host_liveing">The host is starting co-hosting.</string>
    <string name="off_camera_title">The host has turned off your camera</string>
    <string name="off_mic_title">You\'re muted</string>
    <string name="xxx_declines_invite">%s declines your invitation</string>
    <string name="host_disconnected_live">The host has disconnected with you</string>
    <string name="connecting">Connecting</string>
    <string name="invite">Invite</string>
    <string name="Initiate_send">Invited</string>
    <string name="interact_live_tag">Interactive Live</string>
    <string name="host_pk_tag">Host PK</string>
    <string name="co_host_tag">Co-host</string>
    <string name="gift_tag">Gift</string>

    <string name="net_quality_good">Good network</string>
    <string name="net_quality_poor">Poor network</string>
    <string name="net_quality_disconnect">Disconnected</string>

    <string name="anchor_link_from">from %1$s</string>
    <string name="audience_link_request_count"><![CDATA[You have <font color="#FFC95E">%1$d</font> co-host applications]]></string>
    <string name="audience_link_time"><![CDATA[CO-host in <font color="#FFC95E">%1$dm %2$ds</font>]]></string>
    <string name="agree_audience_link">Agree</string>
    <string name="reject_audience_link">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="end_live_title">End live?</string>
    <string name="end_live_message">Leaving the live streaming room, the live will end immediately.</string>
    <string name="end_all_co_audiences_title">End all co-host session?</string>
    <string name="end_all_co_audiences_message">Co-host with all users will end immediately</string>
    <string name="end_an_audience_title">End current co-host?</string>
    <string name="end_an_audience_message">Co-host with the current user will end immediately</string>
    <string name="more">More</string>
    <string name="audience_finish_interact_title">End co-host?</string>
    <string name="audience_finish_interact_message">Co-host with host will end immediately</string>

    <string name="name_suffix_me">%1$s(me)</string>
    <string name="audience_link_permitted_title">Application is approved</string>
    <string name="audience_link_permitted_message">Host has accepted applications and will start soon</string>
    <string name="audience_link_reject_title">Co-host request is denied</string>
    <string name="audience_link_reject_message">Sorry, the host rejected your co-host request</string>
    <string name="audience_link_cancel">Co-host request canceled</string>
    <string name="receive_a_new_pk_invitation">Receive a new PK invitation</string>
    <string name="gift_like">Like</string>
    <string name="gift_sugar">Sugar</string>
    <string name="gift_diamond">Diamond</string>
    <string name="gift_fireworks">Fireworks</string>
    <string name="co_host_application">Co-host application</string>
    <string name="co_host">CO-host list</string>
    <string name="send_gift">Send %1$s</string>
    <string name="add_guest">Add guest</string>
    <string name="audience_link_manage_tips">Microphone and camera can only be turned off, the viewing side can be turned on.</string>
    <string name="video_fps">Video FPS</string>
    <string name="video_quality">Resolution</string>
    <string name="video_bitrate">Video bitrate</string>
    <string name="audience_link_need_permission">Need permission to start link mic.</string>
    <string name="go_live_need_permission">Need permission to start Live.</string>
    <string name="rtm_push_streaming">RTM push streaming</string>
    <string name="rtm_push_streaming_description">Prioritize ultra-low latency streaming</string>
    <string name="rtm_pull_streaming">RTM pull streaming</string>
    <string name="rtm_pull_streaming_description">Prioritize ultra-low latency streaming</string>
    <string name="abr">ABR</string>
    <string name="abr_description">Prevent users from getting stuck during playback</string>
    <string name="summary_overview">Statistics Overview</string>
    <string name="label_viewers">Accumulated viewers</string>
    <string name="label_likes">Likes</string>
    <string name="label_new_followers">New Followers</string>
    <string name="label_gifts">Gifts</string>
    <string name="live_show_suffix">%1$s\'s Live room</string>
    <string name="live_show_duration_mins">Duration for this live: %1$d mins</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="start_live_title">LIVE has started.</string>
    <string name="application_experiencing_xxx_title">FOR FUNCTIONAL EXPERIENCE ONLY (LIMITED TO %1$s MINS). YOUR LIVESTREAM IS OPEN TO ANYONE WITH THE APP.</string>
    <string name="camera_flip">Camera Flip</string>
    <string name="effects">Visual Effects</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="anchor_pk_invitation_sent">Invitation has been sent</string>
    <string name="end_of_pk">End of PK</string>
    <string name="pk_has_ended">PK has ended</string>
    <string name="view_application">View application</string>
    <string name="no_co_host_user">No co-host user</string>
    <string name="end_all_co_host_session">End all co-host session</string>
    <string name="no_guest_requests_yet">No guest requests yet</string>
    <string name="you_can_t_invite_guests_in_a_subscriber_live">You can\'t invite guests in a subscriber LIVE</string>
    <string name="no_host_live">No host live</string>
    <string name="not_support_beauty_error">The open source code does not support beauty-related functions, please download Demo to experience the effect.</string>
    <string name="unable_to_pk_during_audience_link">Unable to PK during co-host process, please try again after ending co-host.</string>
    <string name="unable_to_audience_link_during_pk">Unable to co-host during PK, please try again after ending PK.</string>
    <string name="pk_invitation_reject">Your invitation was declined. Please try again.</string>
    <string name="audience_link_disconnect_one">Co-host with current user has ended</string>
    <string name="audience_link_disconnect_all">Co-host with all users has ended</string>
    <string name="invite_host_pk">Invite host PK</string>
    <string name="during_pk">During PK</string>
    <string name="no_host_online">No host online</string>
    <string name="basic_information">Basic information</string>
    <string name="real_time_information">Real-time information</string>
    <string name="initial_video_bitrate">Initial video bitrate</string>
    <string name="maximum_video_bitrate">Maximum video bitrate</string>
    <string name="minimum_video_bitrate">Minimum video bitrate</string>
    <string name="capture_resolution">Capture resolution</string>
    <string name="push_video_resolution">Push video resolution</string>
    <string name="capture_fps">Capture FPS</string>
    <string name="encoding_format">Encoding format</string>
    <string name="adaptive_bitrate_mode">Adaptive Bitrate Mode</string>
    <string name="real_time_capture_fps">Real-time capture FPS</string>
    <string name="real_time_transmission_fps">Real-time transmission FPS</string>
    <string name="real_time_encoding_bitrate">Real-time encoding bitrate</string>
    <string name="real_time_transmission_bitrate">Real-time transmission bitrate</string>
    <string name="co_host_request_has_been_sent">The co-host request has been sent. Please be patient.</string>
    <string name="not_in_pk_prompt">Currently not in PK, you can select one from the online host list to start PK.</string>
    <string name="same_logged_in">A user with the same ID has logged in. You will be forced to log out.</string>
</resources>
