<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F8FA">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_room_list_header"
        app:layout_constraintDimensionRatio="1125:1020"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_list_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1125:324"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        tools:layout_constraintGuide_begin="25dp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:scaleType="center"
        android:src="@drawable/ic_live_arrow_left24_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:scaleType="center"
        android:src="@drawable/ic_live_core_settings"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/interact_live_tag"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_list_header_label"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/host_pk_tag"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_list_header_label"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/co_host_tag"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tag1"
        app:layout_constraintTop_toTopOf="@id/tag1" />

    <TextView
        android:id="@+id/tag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_list_header_label"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/gift_tag"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tag2"
        app:layout_constraintTop_toTopOf="@id/tag1" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag1"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/layout_live_room_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_host_live"
        android:textColor="#161823"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_guest_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:drawableTop="@drawable/ic_guest_alert"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/go_live"
        style="@style/TkButtonPrimary"
        android:layout_width="152dp"
        android:layout_height="52dp"
        android:layout_marginBottom="46dp"
        android:text="@string/go_live"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp"
        tools:layout_constraintGuide_end="48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>