<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_live_bottom_sheet"
    tools:layout_gravity="bottom">

    <TextView
        android:id="@+id/application"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/co_host_application"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/application_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/application_separator"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginBottom="48dp"
        android:background="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_application"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="application, application_separator"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/wait_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_wait_host_response"
        app:layout_constraintBottom_toTopOf="@id/wait_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/wait_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/co_host_request_has_been_sent"
        android:textColor="#CCCED0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wait_icon" />

    <View
        android:id="@+id/wait_separator"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:background="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wait_description" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_waiting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="wait_icon, wait_description, wait_separator"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>